--- a/src/sk/stu/fiit/bundle_sk_SK.properties
+++ b/src/sk/stu/fiit/bundle_sk_SK.properties
@@ -171,7 +171,7 @@ JANUARY=January
 DD.MM.YYYY=dd.MM.yyyy
 NIMBUS=Nimbus
 CHYBA\ PRI\ CITANI\ ROZMEROV\ Z\ XML\ SUBORU=Chyba pri citani rozmerov z XML suboru
-ADD\ TASK=Add task
+ADD\ TASK=Pridaj \u00falohu
 ASSIGNED\ TO=Assigned to
 DESCRIPTION=Description
 DEADLINE=Deadline
