--- a/src/sk/stu/fiit/bundle_sk_SK.properties
+++ b/src/sk/stu/fiit/bundle_sk_SK.properties
@@ -1,33 +1,14 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
-PROJECT_MANAGER=project_manager
-C\:\\\\USERS\\\\ADAMH\\\\PICTURES\\\\FIITKA\ -\ OBRAZKY\\\\VAVA\\\\LOGO_2.JPG=C:\\\\Users\\\\adamh\\\\Pictures\\\\FIITka - obrazky\\\\VAVA\\\\logo_2.jpg
-HODONIN\ 17=Hodonin 17
-IGNAC\ BAJZA=Ignac Bajza
-LAJZA=lajza
-IGNAC.B=ignac.b
-SUCCESS=Success
 NEW\ IMAGE\ CHOSEN!=New image chosen!
 CHOSEN\ FILE\ IS\ NOT\ IMAGE!=Chosen file is not image!
 SUCCES=Succes
 CHANGES\ SAVED!=Changes saved!
-ALL\ FIELDS\ MUS\ BE\ FILLED!\\N=All fields mus be filled!\\n
 WRONG\ AGE\ TYPE!=Wrong age type!
-AGE\ CAN\ CONTAIN\ ONLY\ NUMBERS!=Age can contain only numbers!
-\\\\D+=\\\\d+
 NEW\ IMAGE=New Image
 CONFIRM=Confirm
-JLABLE1=jLable1
-PICTURE=Picture
-TYPE=Type
+PICTURE=Fotka
+TYPE=Typ
 NAME\:\ =Name: 
 REMOVE\ FROM\ TEAM=Remove from team
-ADD\ MEMBERS...=Add Members...
-NAME\:\ {0}\ \ \\T\ \ ROLE\:{1}=Name: {0}  \\t  Role:{1}
-,\ PRIORITY\:\ {0},\ UNTIL\:\ {1}=, PRIORITY: {0}, UNTIL: {1}
-NEW\ NODE\ =new node 
 UPDATED=updated
 HEIGHT=height
 WIDTH=width
@@ -37,66 +18,47 @@ NEPODARILO\ SA\ USPESNE\ NACITAT\ DATA.{0}=Nepodarilo sa uspesne nacitat data.{0
 DATA\ USPESNE\ NACITANE=Data uspesne nacitane
 CHYBA\ PRI\ UKLADANI\ DAT.\\N{0}=Chyba pri ukladani dat.\\n{0}
 DATA\ BILI\ ULOZENE=Data bili ulozene
-SRC/SK/STU/FIIT/XML/SETTINGS.XML=src/sk/stu/fiit/xml/settings.xml
 SAVE.SER=save.ser
 EMPTYFIELD=EmptyField
 YYYY.MM.DD=yyyy.MM.dd
-USER'S\ PROGRESS=User's progress
+USER'S\ PROGRESS=Pou\u017e\u00edvate\u013eov pokrok
 PROJECT\ \=\ {0}=project = {0}
 DLZKA\ JE\ JAKO\ \=\ {0}=dlzka je jako = {0}
-I\ \=\ {0}=i = {0}
-Y\ \=\ {0}=y = {0}
-WRONG\ INPUT=Wrong input
-YOU\ HAVE\ TO\ CHOOSE\ TASK!=You have to choose task!
+YOU\ HAVE\ TO\ CHOOSE\ TASK!=Mus\u00edte si zvoli\u0165 \u00falohu!
 DONE=DONE
 DOING=DOING
 TODO=TODO
 NO\ TASKS=No Tasks
 THIS\ USER\ HAS\ NO\ TASKS!=This user has no Tasks!
-DD-MM-YYYY\ HH\:MM\:SS=dd-MM-yyyy HH:mm:ss
 POCET\ RAIDOK\ \=\ {0}=pocet raidok = {0}
 NO\ TASK=No Task
 NO\ TASK\ AT\ THAT\ DAY.=No task at that day.
-\ MORE\ TASKS=\ more tasks
-\\N{0}=\\n{0}
 DETAIL\ VIEW=Detail view
-YOURS\ CALENDAR=Yours Calendar
+YOURS\ CALENDAR=V\u00e1\u0161 Kalend\u00e1r
 CORE\ TEAM=Core Team
 CONTINUE=Continue
-ADD\ USER=Add user
+ADD\ USER=Prida\u0165 pou\u017e\u00edvate\u013ea
 TEAMMATES=TEAMMATES
 PROJECT\ MANAGER=Project Manager
-JLABEL7=jLabel7
-JLABEL5=jLabel5
-JLABEL4=jLabel4
 PROJECT\ TASKS=Project tasks
-JLABEL3=jLabel3
 TEAM=TEAM
-WRONG\ FILE=Wrong file
 CHOSEN\ FILE\ IS\ NOT\ AN\ IMAGE!=Chosen file is not an image!
 PROFILE\ PICTURE=Profile Picture
 NO\ PROFILE\ PICTURE=No profile picture
 USERNAME=Username
 STATUS=Status
 PASSWORD=Password
-AGE=Age
-ADDRESS=Address
+ADDRESS=Adresa
 CREATE\ PROFILE=Create Profile
 CHYBA\ PRI\ VYTVARANI\ TASK-U.=Chyba pri vytvarani task-u.
-ZLE\ UDAJE=Zle udaje
-ASSIGN=Assign
+Zle\ udaje=Zl\u00e9 \u00fadaje
 CANCEL=Cancel
 CREATE=Create
-JLABEL11=jLabel11
-JLABEL10=jLabel10
-PROJECT=Project
+PROJECT=Projekt
 STATE=State
 PRIORITY=Priority
 SUMMARY=Summary
 JTEXTFIELD1=jTextField1
-WRONG\ INPUT\:\ {0}=Wrong input: {0}
-BAD\ DATE\ INPUT=Bad Date Input
-WRONG\ DEADLINE=wrong deadline
 DUPLICIT\ PROJECT\ ID=Duplicit project ID
 DUPLICIT\ PROJECT\ ID,\ CONSIDER\ CHANGING\ IT.=Duplicit project ID, consider changing it.
 WARNING=Warning
@@ -110,49 +72,36 @@ URGENT=Urgent
 PROJECT\ PRIORITY=Project Priority
 TAG=Tag
 ID=ID
-NAME=Name
+NAME=Meno
 TEXTAREA\ WAS\ CHANGED.=TextArea was changed.
-\\N=\\n
 DIRECTOR=director
 USER\ HAS\ NO\ TASKS!=User has no Tasks!
 USER\ \=\ {0}=user = {0}
 NOTES=Notes
 CESTA\ K\ OBRAZKU=cesta k obrazku
 USER=user
-HOLIC\ 12=Holic 12
-ADA=AdA
-ADAM=adam
-ANDREA=andrea
-LOG\ OUT=Log out
-NEW\ PROFILE=New Profile
-NEW\ PROJECT=New Project
-NEW\ TASK=New Task
+LOG\ OUT=Odhl\u00e1si\u0165
+NEW\ PROFILE=Nov\u00fd Profil
+NEW\ PROJECT=Nov\u00fd Projekt
+NEW\ TASK=Nov\u00e1 \u00faloha
 PROJECTS=Projects
-SETTINGS=Settings
-DETAILS=Details
-\ \ =\ \ 
-TASKS=Tasks
+SETTINGS=Nastavenia
+DETAILS=Detail
+TASKS=\u00dalohy
 NONE=None
-WRONG\ CREDENTIALS=Wrong credentials
-WRONG\ USERNAME\ OR\ PASSWORD!=Wrong username or password!
-LOGIN=Login
+WRONG\ USERNAME\ OR\ PASSWORD!=Nespr\u00e1vne prihlasovacie \u00fadaje!
+LOGIN=Prihl\u00e1si\u0165
 PASSWORD\:=Password:
 USERNAME\:=Username:
 VITAJTE\ V\ PROGRAME!=Vitajte v programe!
-JLABEL2=jLabel2
-JLABEL1=jLabel1
-\\\\N=\\\\n
 SEGOE\ UI\ LIGHT=Segoe UI Light
-\\NDEADLINES\:\ {0}=\\nDeadlines: {0}
 DECEMBER=December
 NOVEMBER=November
 OCTOBER=October
 SEPTEMBER=September
-AUGUST=August
 JULY=July
 JUNE=June
 MAY=May
-APRIL=April
 MARCH=March
 FEBRUARY=February
 DD/MM/YYYY=dd/MM/yyyy
@@ -163,19 +112,23 @@ WED=Wed
 TUE=Tue
 MON=Mon
 SUN=Sun
-CALENDAR=Calendar
->=>
-<=<
+CALENDAR=Kalend\u00e1r
 CHANGE\ YEAR\:=Change year:
 JANUARY=January
-DD.MM.YYYY=dd.MM.yyyy
 NIMBUS=Nimbus
-CHYBA\ PRI\ CITANI\ ROZMEROV\ Z\ XML\ SUBORU=Chyba pri citani rozmerov z XML suboru
 ADD\ TASK=Pridaj \u00falohu
-ASSIGNED\ TO=Assigned to
-DESCRIPTION=Description
+DESCRIPTION=Popis
 DEADLINE=Deadline
 PROJECT\ ID=Project ID
 PROJECT\ NAME=Project Name
-ADMIN=admin
 NASTAVENIA=Settings
+LOGOUT=Odhl\u00e1si\u0165
+TYPE_USER=Typ
+YOUR_INFO=O v\u00e1s
+NAME_=Meno
+PICTURE_=Fotka
+TODOS_=V\u00e1\u0161 pokrok
+ZLE\ UDAJE=Zle udaje
+TASK_N=Meno
+DESC_TASK=Popis
+TASKS_DET=\u00daLOHY
