--- a/src/sk/stu/fiit/bundle_sk_SK.properties
+++ b/src/sk/stu/fiit/bundle_sk_SK.properties
@@ -1,13 +1,13 @@
-NEW\ IMAGE\ CHOSEN!=New image chosen!
-CHOSEN\ FILE\ IS\ NOT\ IMAGE!=Chosen file is not image!
+NEW\ IMAGE\ CHOSEN!=Bola vybran\u00e1 fotka!
+CHOSEN\ FILE\ IS\ NOT\ IMAGE!=Zl\u00fd form\u00e1t s\u00faboru!
 SUCCES=Succes
-CHANGES\ SAVED!=Changes saved!
+CHANGES\ SAVED!=Zmeny boli ulo\u017een\u00e9!
 WRONG\ AGE\ TYPE!=Wrong age type!
-NEW\ IMAGE=New Image
-CONFIRM=Confirm
+NEW\ IMAGE=Nov\u00e1 fotka
+CONFIRM=Potvr\u010f
 PICTURE=Fotka
 TYPE=Typ
-NAME\:\ =Name: 
+NAME\:\ =Meno: 
 REMOVE\ FROM\ TEAM=Remove from team
 UPDATED=updated
 HEIGHT=height
@@ -25,103 +25,103 @@ USER'S\ PROGRESS=Pou\u017e\u00edvate\u013eov pokrok
 PROJECT\ \=\ {0}=project = {0}
 DLZKA\ JE\ JAKO\ \=\ {0}=dlzka je jako = {0}
 YOU\ HAVE\ TO\ CHOOSE\ TASK!=Mus\u00edte si zvoli\u0165 \u00falohu!
-DONE=DONE
-DOING=DOING
-TODO=TODO
-NO\ TASKS=No Tasks
+DONE=HOTOVO
+DOING=PRACUJE SA
+TODO=TREBA SPRAVI\u0164
+NO\ TASKS=\u017diadne \u00falohy
 THIS\ USER\ HAS\ NO\ TASKS!=This user has no Tasks!
 POCET\ RAIDOK\ \=\ {0}=pocet raidok = {0}
-NO\ TASK=No Task
-NO\ TASK\ AT\ THAT\ DAY.=No task at that day.
-DETAIL\ VIEW=Detail view
+NO\ TASK=\u017diadna \u00faloha
+NO\ TASK\ AT\ THAT\ DAY.=Vo zvolen\u00fd de\u0148 nem\u00e1te \u00falohy.
+DETAIL\ VIEW=Detailn\u00fd poh\u013ead
 YOURS\ CALENDAR=V\u00e1\u0161 Kalend\u00e1r
 CORE\ TEAM=Core Team
-CONTINUE=Continue
+CONTINUE=Pokra\u010duj
 ADD\ USER=Prida\u0165 pou\u017e\u00edvate\u013ea
 TEAMMATES=TEAMMATES
-PROJECT\ MANAGER=Project Manager
-PROJECT\ TASKS=Project tasks
+PROJECT\ MANAGER=Project Mana\u017e\u00e9r
+PROJECT\ TASKS=\u00dalohy v projekte
 TEAM=TEAM
-CHOSEN\ FILE\ IS\ NOT\ AN\ IMAGE!=Chosen file is not an image!
-PROFILE\ PICTURE=Profile Picture
-NO\ PROFILE\ PICTURE=No profile picture
-USERNAME=Username
+CHOSEN\ FILE\ IS\ NOT\ AN\ IMAGE!=Zl\u00fd form\u00e1t s\u00faboru!
+PROFILE\ PICTURE=Profilov\u00e1 fotka
+NO\ PROFILE\ PICTURE=\u017diadna fotka
+USERNAME=Prihlasovacie Meno
 STATUS=Status
-PASSWORD=Password
+PASSWORD=Heslo
 ADDRESS=Adresa
-CREATE\ PROFILE=Create Profile
+CREATE\ PROFILE=Vytvor Profil
 CHYBA\ PRI\ VYTVARANI\ TASK-U.=Chyba pri vytvarani task-u.
 Zle\ udaje=Zl\u00e9 \u00fadaje
 CANCEL=Cancel
-CREATE=Create
+CREATE=Vytvor
 PROJECT=Projekt
 STATE=State
-PRIORITY=Priority
-SUMMARY=Summary
+PRIORITY=Priorita
+SUMMARY=Preh\u013ead
 JTEXTFIELD1=jTextField1
-DUPLICIT\ PROJECT\ ID=Duplicit project ID
-DUPLICIT\ PROJECT\ ID,\ CONSIDER\ CHANGING\ IT.=Duplicit project ID, consider changing it.
+DUPLICIT\ PROJECT\ ID=Duplicitn\u00e9 ID projektu
+DUPLICIT\ PROJECT\ ID,\ CONSIDER\ CHANGING\ IT.=Duplicitn\u00e9 ID projektu, zadajte in\u00e9.
 WARNING=Warning
-USERNAME\ ALREADY\ USED=Username already used
+USERNAME\ ALREADY\ USED=Prihlasovacie meno je pou\u017e\u00edvan\u00e9
 =
-PROJECT'S\ DEADLINE=Project's Deadline
-PREFIX\ ADDED\ TO\ THE\ PROJECT=prefix added to the project
-CREATE\ PROJECT=Create project
-NON-URGENT=Non-Urgent
-URGENT=Urgent
-PROJECT\ PRIORITY=Project Priority
+PROJECT'S\ DEADLINE=Deadline projektu
+PREFIX\ ADDED\ TO\ THE\ PROJECT=jedine\u010dn\u00fd identifik\u00e1tor projektu
+CREATE\ PROJECT=Vytvor Projekt
+NON-URGENT=Nie-Urgentn\u00e9
+URGENT=Urgentn\u00e9
+PROJECT\ PRIORITY=Priorita Projektu
 TAG=Tag
 ID=ID
 NAME=Meno
 TEXTAREA\ WAS\ CHANGED.=TextArea was changed.
 DIRECTOR=director
-USER\ HAS\ NO\ TASKS!=User has no Tasks!
+USER\ HAS\ NO\ TASKS!=Pou\u017e\u00edvate\u013e nem\u00e1 \u017eiadne \u00falohy!
 USER\ \=\ {0}=user = {0}
-NOTES=Notes
+NOTES=Pozn\u00e1mky
 CESTA\ K\ OBRAZKU=cesta k obrazku
 USER=user
 LOG\ OUT=Odhl\u00e1si\u0165
 NEW\ PROFILE=Nov\u00fd Profil
 NEW\ PROJECT=Nov\u00fd Projekt
 NEW\ TASK=Nov\u00e1 \u00faloha
-PROJECTS=Projects
+PROJECTS=Projekty
 SETTINGS=Nastavenia
 DETAILS=Detail
 TASKS=\u00dalohy
-NONE=None
+NONE=Ni\u010d tu nie je
 WRONG\ USERNAME\ OR\ PASSWORD!=Nespr\u00e1vne prihlasovacie \u00fadaje!
 LOGIN=Prihl\u00e1si\u0165
-PASSWORD\:=Password:
-USERNAME\:=Username:
+PASSWORD\:=Heslo:
+USERNAME\:=Prihlasovacie Meno:
 VITAJTE\ V\ PROGRAME!=Vitajte v programe!
 SEGOE\ UI\ LIGHT=Segoe UI Light
 DECEMBER=December
 NOVEMBER=November
-OCTOBER=October
+OCTOBER=Okt\u00f3ber
 SEPTEMBER=September
-JULY=July
-JUNE=June
-MAY=May
-MARCH=March
-FEBRUARY=February
+JULY=J\u00fal
+JUNE=J\u00fan
+MAY=M\u00e1j
+MARCH=Marec
+FEBRUARY=Febru\u00e1r
 DD/MM/YYYY=dd/MM/yyyy
-SAT=Sat
-FRI=Fri
-THU=Thu
-WED=Wed
-TUE=Tue
-MON=Mon
-SUN=Sun
+SAT=Sob
+FRI=Pia
+THU=\u0160tv
+WED=Str
+TUE=Ut
+MON=Pon
+SUN=Ned
 CALENDAR=Kalend\u00e1r
-CHANGE\ YEAR\:=Change year:
-JANUARY=January
+CHANGE\ YEAR\:=Zme\u0148 rok:
+JANUARY=Janu\u00e1r
 NIMBUS=Nimbus
 ADD\ TASK=Pridaj \u00falohu
 DESCRIPTION=Popis
 DEADLINE=Deadline
 PROJECT\ ID=Project ID
-PROJECT\ NAME=Project Name
-NASTAVENIA=Settings
+PROJECT\ NAME=N\u00e1zov Projektu
+NASTAVENIA=Nastavenia
 LOGOUT=Odhl\u00e1si\u0165
 TYPE_USER=Typ
 YOUR_INFO=O v\u00e1s
@@ -132,3 +132,20 @@ ZLE\ UDAJE=Zle udaje
 TASK_N=Meno
 DESC_TASK=Popis
 TASKS_DET=\u00daLOHY
+PROJECTS_MAIN=Projekty
+PROJECT_MANAGER=project_manager
+SRC/SK/STU/FIIT/XML/SETTINGS.XML=src/sk/stu/fiit/xml/settings.xml
+AGE=Vek
+ADMIN=admin
+AGE\ CAN\ CONTAIN\ ONLY\ NUMBERS!=Vek m\u00f4\u017ee by\u0165 len \u010d\u00edslo!
+APRIL=Apr\u00edl
+ASSIGN=Prira\u010f
+ASSIGNED\ TO=Priraden\u00e9
+AUGUST=August
+BAD\ DATE\ INPUT=Zle zadan\u00fd d\u00e1tum
+ALL\ FIELDS\ MUS\ BE\ FILLED!\\N=Vypl\u0148 v\u0161etk\u00e9 polia\\n
+PROJECT_WIDGET=Projekt
+TEAMMATES_WIDGET=M\u00f4j t\u00edm
+TASK_=\u00daloha
+SUCCESS=\u00daspech
+NEW\ USER=Nov\u00fd pou\u017e\u00edvate\u013e
